{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 337,
  "lineage": "2aa6e90a-8207-5c65-1b30-17a9b15bdcd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MaciejBekasDemoEasy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:644435390668:instance/i-0a123d4d7d5f62871",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a123d4d7d5f62871",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaciejBekasBootcampPL",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00963bde1d131c376",
            "private_dns": "ip-10-0-0-8.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-18-169-183-14.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.183.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e55c79fb14eb361d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087f695305a2c830c",
            "tags": {
              "Name": "MaciejBekasDemoEasy",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "tags_all": {
              "Name": "MaciejBekasDemoEasy",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "MaciejBekasDemoEasy",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "vpc_security_group_ids": [
              "sg-049eb34ff19c14aa5"
            ]
          },
          "dependencies": [
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-1",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MaciejBekasDemoEasy2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:644435390668:instance/i-0c4c2fa55fea5a52b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4c2fa55fea5a52b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaciejBekasBootcampPL",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b689a31ff27e9fb1",
            "private_dns": "ip-10-0-0-20.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "public_dns": "ec2-13-40-180-183.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.180.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7cb24fdf96897fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e86695fab0e96adb",
            "tags": {
              "Name": "MaciejBekasDemoEasy2",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "tags_all": {
              "Name": "MaciejBekasDemoEasy2",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "MaciejBekasDemoEasy2",
              "bootcamp": "poland1",
              "created_by": "MaciejBekas"
            },
            "vpc_security_group_ids": [
              "sg-049eb34ff19c14aa5"
            ]
          },
          "dependencies": [
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-2",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MaciejBekas-easy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:internet-gateway/igw-0ab5fa9589ee6aa68",
            "id": "igw-0ab5fa9589ee6aa68",
            "owner_id": "644435390668",
            "tags": {
              "Name": "MaciejBekas-easy-igw"
            },
            "tags_all": {
              "Name": "MaciejBekas-easy-igw"
            },
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "dependencies": [
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "MaciejBekas-easy-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:loadbalancer/app/MaciejBekas-easy-LB/5c37a5ab97ccfd53",
            "arn_suffix": "app/MaciejBekas-easy-LB/5c37a5ab97ccfd53",
            "desync_mitigation_mode": "defensive",
            "dns_name": "MaciejBekas-easy-LB-1036085279.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:loadbalancer/app/MaciejBekas-easy-LB/5c37a5ab97ccfd53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MaciejBekas-easy-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-049eb34ff19c14aa5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087f695305a2c830c"
              },
              {
                "subnet_id": "subnet-0e86695fab0e96adb"
              }
            ],
            "subnets": [
              "subnet-087f695305a2c830c",
              "subnet-0e86695fab0e96adb"
            ],
            "vpc_id": "vpc-09e5b8f7cdee525fe",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-1",
            "aws_subnet.MaciejBekas-easy-subnet-public-2",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:listener/app/MaciejBekas-easy-LB/5c37a5ab97ccfd53/667fbd177eff601f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:listener/app/MaciejBekas-easy-LB/5c37a5ab97ccfd53/667fbd177eff601f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:loadbalancer/app/MaciejBekas-easy-LB/5c37a5ab97ccfd53",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.MaciejBekas-easy-LB",
            "aws_lb_target_group.target_group",
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-1",
            "aws_subnet.MaciejBekas-easy-subnet-public-2",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b",
            "arn_suffix": "targetgroup/MaciejBekasTG/780959e9308b171b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "MaciejBekasTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "dependencies": [
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b-20221005094319775400000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b",
            "target_id": "i-0a123d4d7d5f62871"
          },
          "dependencies": [
            "aws_instance.MaciejBekasDemoEasy",
            "aws_lb_target_group.target_group",
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-1",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b-20221005094319750800000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:644435390668:targetgroup/MaciejBekasTG/780959e9308b171b",
            "target_id": "i-0c4c2fa55fea5a52b"
          },
          "dependencies": [
            "aws_instance.MaciejBekasDemoEasy2",
            "aws_lb_target_group.target_group",
            "aws_security_group.MaciejBekas-easy-sec-group",
            "aws_subnet.MaciejBekas-easy-subnet-public-2",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MaciejBekas-easy-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:route-table/rtb-067ab3b182524d098",
            "id": "rtb-067ab3b182524d098",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab5fa9589ee6aa68",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "tags_all": {
              "Name": "prod-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MaciejBekas-easy-igw",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MaciejBekas-easy-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ff5190fb94786f",
            "route_table_id": "rtb-067ab3b182524d098",
            "subnet_id": "subnet-087f695305a2c830c"
          },
          "dependencies": [
            "aws_internet_gateway.MaciejBekas-easy-igw",
            "aws_route_table.MaciejBekas-easy-public-crt",
            "aws_subnet.MaciejBekas-easy-subnet-public-1",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MaciejBekas-easy-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056f1d5ec7b1201f4",
            "route_table_id": "rtb-067ab3b182524d098",
            "subnet_id": "subnet-0e86695fab0e96adb"
          },
          "dependencies": [
            "aws_internet_gateway.MaciejBekas-easy-igw",
            "aws_route_table.MaciejBekas-easy-public-crt",
            "aws_subnet.MaciejBekas-easy-subnet-public-2",
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MaciejBekas-easy-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:security-group/sg-049eb34ff19c14aa5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049eb34ff19c14aa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20221005094238005100000001",
            "name_prefix": "terraform-",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MaciejBekas-easy-sec-group"
            },
            "tags_all": {
              "Name": "MaciejBekas-easy-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MaciejBekas-easy-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:subnet/subnet-087f695305a2c830c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f695305a2c830c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MaciejBekas-easy-subnet-public-1"
            },
            "tags_all": {
              "Name": "MaciejBekas-easy-subnet-public-1"
            },
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "dependencies": [
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MaciejBekas-easy-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:subnet/subnet-0e86695fab0e96adb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86695fab0e96adb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MaciejBekas-easy-subnet-public-2"
            },
            "tags_all": {
              "Name": "MaciejBekas-easy-subnet-public-2"
            },
            "vpc_id": "vpc-09e5b8f7cdee525fe"
          },
          "dependencies": [
            "aws_vpc.MaciejBekas-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MaciejBekas-easy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:644435390668:vpc/vpc-09e5b8f7cdee525fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079a152e2b7de4ae6",
            "default_route_table_id": "rtb-07e79a4595d8dfa6b",
            "default_security_group_id": "sg-03f1a92d25af1a022",
            "dhcp_options_id": "dopt-3090d558",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09e5b8f7cdee525fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e79a4595d8dfa6b",
            "owner_id": "644435390668",
            "tags": {
              "Name": "MaciejBekas-easy-vpc"
            },
            "tags_all": {
              "Name": "MaciejBekas-easy-vpc"
            }
          }
        }
      ]
    }
  ]
}